Modified test items endpoint
